--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402914970" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402988511" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402914970" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402914970" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402988511" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402988511" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -264,62 +264,7 @@
       <input class="btn" type="submit" value="Lisää kieliversio" />
       <input class="btn" type="submit" value="Osallistumisraportti" />
     </div>
-    <div class="g">
-      <div class="g-2up">
-        <div class="gi">
-          <div class="content-item large">
-            <div class="status">
-              Tila: <span class="state">Käynnissä</span>
-            </div>
-            <div class="gantt-title">
-              Aikataulu: <span class="date">23.10.2012–31.12.2014</span>
-            </div>
-          </div>
-          <div class="content-item large">
-            <div class="fadeout">
-              <p class="ingressi">Hankkeen kuvausteksti tänne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.</p>
-              <p class="read-more">
-                <a href="">Lue lisää</a>
-              </p>
-            </div>
-            <div class="some-buttons inline-element">
-              <a href="http://www.facebook.com/otakantaa" class="facebook" target="_blank">
-                <i class="om-facebook om"></i>
-                <span>Facebook</span>
-              </a>
-              <a href="http://www.twitter.com/otakantaa" class="twitter" target="_blank">
-                <i class="om-twitter om"></i>
-                <span>Twitter</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="gi">
-          <div class="content-item large invitation">
-            <h3>
-              <img src="../../images/favicon_32x32.jpg" />Kutsu muita osallistumaan
-            </h3>
-            <div class="form-element">
-              <div class="helper-container">
-                <span class="icon-help" title="lisää käyttäjänimiä tai sähköpostiosoitteita" placement="top">Kenelle</span>
-                <p class="helper-text small is-vishidden">lisää käyttäjänimiä tai sähköpostiosoitteita</p>
-              </div>
-              <input type="text" />
-            </div>
-            <div class="form-element">
-              <div class="helper-container">
-                <span class="icon-help" title="valinnainen viesti sähköpostikutsuun" placement="top">Viesti</span>
-                <p class="helper-text small is-vishidden">valinnainen viesti sähköpostikutsuun</p>
-              </div>
-              <textarea class="js-dynamic" maxlength="400" placeholder="Kirjoita valinnainen viesti..."></textarea>
-            </div>
-            <input class="btn btn-otk" type="submit" value="Lähetä kutsu" />
-            <div class="sidebar-form-errors">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- Menossa olevat osallistumiset -->
     <div class="content-item large">
       <div id="showParticipations" class="content-item large participations cf">
         <h2 class="ongoing">
@@ -384,9 +329,48 @@
         </div>
       </div>
     </div>
+    
     <div class="g">
       <div class="g-2up">
         <div class="gi">
+          <div class="content-item large">
+            <div class="status">
+              Tila: <span class="state">Käynnissä</span>
+            </div>
+            <div class="gantt-title">
+              Aikataulu: <span class="date">23.10.2012–31.12.2014</span>
+            </div>
+          </div>
+          <div class="content-item large">
+            <div class="fadeout">
+              <p class="ingressi">Hankkeen kuvausteksti tänne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.</p>
+              <p class="read-more">
+                <a href="">Lue lisää</a>
+              </p>
+            </div>
+            <div class="some-buttons inline-element">
+              <a href="http://www.facebook.com/otakantaa" class="facebook" target="_blank">
+                <i class="om-facebook om"></i>
+                <span>Facebook</span>
+              </a>
+              <a href="http://www.twitter.com/otakantaa" class="twitter" target="_blank">
+                <i class="om-twitter om"></i>
+                <span>Twitter</span>
+              </a>
+            </div>
+          </div>
+          <div class="content-item large project-analysis">
+            <span class="debug-hide">x</span>
+            <h2>
+              Yhteenveto
+            </h2>
+            <div class="fadeout">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. </p>
+              <p class="read-more">
+                <a href="">Lue lisää</a>
+              </p>
+            </div>
+          </div>
           <div class="content-item large">
             <div class="fadeout">
               <img id="chartHankeGantt" src="../../images/fpo_square.png" alt="Gantt-kuva" />
@@ -396,6 +380,7 @@
             </div>
           </div>
           <div class="content-item large participator-list">
+            <span class="debug-hide">x</span>
             <div class="helper-container">
               <span class="icon-help h3" title="Lorem ipsum" placement="top">Hankkeen osallistujat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -509,6 +494,28 @@
           </div>
         </div>
         <div class="gi">
+          <div class="content-item large invitation">
+            <h3>
+              <img src="../../images/favicon_32x32.jpg" />Kutsu muita osallistumaan
+            </h3>
+            <div class="form-element">
+              <div class="helper-container">
+                <span class="icon-help" title="lisää käyttäjänimiä tai sähköpostiosoitteita" placement="top">Kenelle</span>
+                <p class="helper-text small is-vishidden">lisää käyttäjänimiä tai sähköpostiosoitteita</p>
+              </div>
+              <input type="text" />
+            </div>
+            <div class="form-element">
+              <div class="helper-container">
+                <span class="icon-help" title="valinnainen viesti sähköpostikutsuun" placement="top">Viesti</span>
+                <p class="helper-text small is-vishidden">valinnainen viesti sähköpostikutsuun</p>
+              </div>
+              <textarea class="js-dynamic" maxlength="400" placeholder="Kirjoita valinnainen viesti..."></textarea>
+            </div>
+            <input class="btn btn-otk" type="submit" value="Lähetä kutsu" />
+            <div class="sidebar-form-errors">
+            </div>
+          </div>
           <div class="content-item large hanke-info">
             <h2>
               <a id="Info">
@@ -564,18 +571,7 @@
                 </tr>
               </tbody>
             </table>
-          </div>
-          <div class="content-item large project-analysis">
-            <h2>
-              Yhteenveto
-            </h2>
-            <div class="fadeout">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. </p>
-              <p class="read-more">
-                <a href="">Lue lisää</a>
-              </p>
-            </div>
-          </div>
+          </div>          
           <div class="content-item large keywords">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat ja paikkakunnat</span>
@@ -596,6 +592,40 @@
         </div>
       </div>
     </div>
+
+    <!-- Päättyneet osallistumiset -->
+    <div class="content-item large">
+      <div class="content-item large participations cf">
+        <h2 class="ongoing">
+          Päättyneet osallistumiset
+        </h2>
+        <div class="lift-button gray-base participation float-left">
+          <div class="count-container">
+            <span class="icon-span icon-comment"></span>
+            <a href="//www.foo.bar">17</a>
+          </div>
+          <a class="icon-lift-link" href="//www.foo.bar">Ympäristön hyvinvointi - miten sitä voidaan...</a>
+          <span class="date">26.1. asti</span>
+        </div>
+        <div class="lift-button gray-base participation float-left">
+          <div class="count-container">
+            <span class="icon-span icon-comment"></span>
+            <a href="//www.foo.bar">24</a>
+          </div>
+          <a class="icon-lift-link" href="//www.foo.bar">Kaupungin asukkaiden hyvinvointi ja osallistu...</a>
+          <span class="date">26.1. asti</span>
+        </div>
+        <div class="lift-button gray-base participation float-left">
+          <div class="count-container">
+            <span class="icon-span icon-comment"></span>
+            <a href="//www.foo.bar">17</a>
+          </div>
+          <a class="icon-lift-link" href="//www.foo.bar">Miten nyt kerättävä rahoitus tulisi sijoittaa?</a>
+          <span class="date">26.1. asti</span>
+        </div>        
+      </div>
+    </div>
+
   </section><!--End role=main-->
   <!-- Begin Footer -->
   <footer class="footer" role="contentinfo">
@@ -846,10 +876,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402914970">
+	<script id="pl-js-polyfill-insert-1402988511">
 		(function() {
 			if (self != top) {
-				var cb = '1402914970';
+				var cb = '1402988511';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -858,10 +888,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402914970">
+	<script id="pl-js-insert-1402988511">
 		(function() {
 			if (self != top) {
-				var cb = '1402914970';
+				var cb = '1402988511';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
