--- a/patterns/03-templates-02-article/03-templates-02-article.html
+++ b/patterns/03-templates-02-article/03-templates-02-article.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402510073" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402994689" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402510073" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402510073" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402994689" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402994689" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -323,24 +323,24 @@
 		</form>						<ul class="comment-list">
 				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/any" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Bertil Aaij</a></h4>
+		<img src="http://placeimg.com/100/100/people" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Junius Koolen</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p>
+						<p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Ass semper velit sizzle fo.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Aquila Achterkamp</a></h4>
+		<img src="http://placeimg.com/100/100/any/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Jacobus Sneiders</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
+						<p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/tech" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Teun Richard</a></h4>
+		<img src="http://placeimg.com/100/100/animals" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Duane Wilms</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+						<p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
@@ -351,10 +351,10 @@
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/any/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Freyr Hines</a></h4>
+		<img src="http://placeimg.com/100/100/tech" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Teun Richard</a></h4>
 					</div>
 					<div class="comment-text">
-						<p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p>
+						<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -641,10 +641,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402510073">
+	<script id="pl-js-polyfill-insert-1402994689">
 		(function() {
 			if (self != top) {
-				var cb = '1402510073';
+				var cb = '1402994689';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -653,10 +653,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402510073">
+	<script id="pl-js-insert-1402994689">
 		(function() {
 			if (self != top) {
-				var cb = '1402510073';
+				var cb = '1402994689';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
