--- a/public/patterns/00-atoms-04-images-05-icons/00-atoms-04-images-05-icons.html
+++ b/public/patterns/00-atoms-04-images-05-icons/00-atoms-04-images-05-icons.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="pl">
+<html class="no-js">
 	<head>
 		<title>Pattern Lab</title>
 		<meta charset="UTF-8">
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402994877" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402997058" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402994877" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402994877" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402997058" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402997058" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -54,6 +54,7 @@
 	<li><i class="icon-ok size-l"></i>Suuri iconi</li>
 	<li><i class="icon-ok size-xl"></i>Erittäin suuri iconi</li>
 </ul>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="../../js/modernizr.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 	<script type="text/javascript" src="../../js/plugins.min.js"></script>
@@ -102,10 +103,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402994877">
+	<script id="pl-js-polyfill-insert-1402997058">
 		(function() {
 			if (self != top) {
-				var cb = '1402994877';
+				var cb = '1402997058';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -114,10 +115,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402994877">
+	<script id="pl-js-insert-1402997058">
 		(function() {
 			if (self != top) {
-				var cb = '1402994877';
+				var cb = '1402997058';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
