--- a/public/patterns/04-pages-02-article/04-pages-02-article.html
+++ b/public/patterns/04-pages-02-article/04-pages-02-article.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="pl">
+<html class="no-js">
 	<head>
 		<title>Top 10 Trails You Have To Hike Before You Die</title>
 		<meta charset="UTF-8">
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402994877" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402997058" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402994877" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402994877" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402997058" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402997058" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -326,6 +326,13 @@
 		</form>						<ul class="comment-list">
 				<li class="comment-container">
 					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/any/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Freyr Hines</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
 		<img src="http://placeimg.com/100/100/tech" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Teun Richard</a></h4>
 					</div>
 					<div class="comment-text">
@@ -340,24 +347,17 @@
 					</div>
 				</li>				<li class="comment-container">
 					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/tech/sepia" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Matthias Macguinness</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
-		<img src="http://placeimg.com/100/100/people/grayscale" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Frans Keegan</a></h4>
-					</div>
-					<div class="comment-text">
-						<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
-					</div>
-				</li>				<li class="comment-container">
-					<div class="comment-meta">
 		<img src="http://placeimg.com/100/100/arch" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Fergus Althuis</a></h4>
 					</div>
 					<div class="comment-text">
 						<p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
+					</div>
+				</li>				<li class="comment-container">
+					<div class="comment-meta">
+		<img src="http://placeimg.com/100/100/nature" alt="Avatar" class="user-avatar"/>						<h4 class="comment-name"><a href="#">Siguror Hanigan</a></h4>
+					</div>
+					<div class="comment-text">
+						<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
 					</div>
 				</li>						</ul>
 					</div>
@@ -596,6 +596,7 @@
 		</footer>		</div>
 	</footer>
 	<!-- End Footer --></div>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="../../js/modernizr.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 	<script type="text/javascript" src="../../js/plugins.min.js"></script>
@@ -644,10 +645,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402994877">
+	<script id="pl-js-polyfill-insert-1402997058">
 		(function() {
 			if (self != top) {
-				var cb = '1402994877';
+				var cb = '1402997058';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -656,10 +657,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402994877">
+	<script id="pl-js-insert-1402997058">
 		(function() {
 			if (self != top) {
-				var cb = '1402994877';
+				var cb = '1402997058';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
